tests/ui/generic-const-items/parameter-defaults.stderr
error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/parameter-defaults.rs:10:12
   |
LL | const NONE<T = ()>: Option<T> = None::<T>;
   |            ^^^^^^

error[E0282]: type annotations needed
  --> $DIR/parameter-defaults.rs:13:13
   |
LL |     let _ = NONE;
   |             ^^^^ cannot infer type for type parameter `T` declared on the constant `NONE`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
